--- a/web/package.json
+++ b/web/package.json
@@ -1,12 +1,12 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "main": "main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,9 @@
     "three": "^0.173.0"
   },
   "devDependencies": {
-    "vite": "^6.1.0"
+    "@types/three": "^0.173.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
+    "vite-plugin-checker": "^0.8.0"
   }
 }
