--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@astrojs/preact": "^4.0.4",
     "@preact/signals": "^2.0.1",
-    "astro": "^5.2.5",
-    "preact": "^10.25.4",
     "@types/gsap": "^1.20.2",
     "@webgpu/types": "^0.1.54",
+    "astro": "^5.2.5",
     "gsap": "^3.12.7",
+    "preact": "^10.25.4",
     "three": "^0.173.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.4",
     "@types/three": "^0.173.0",
     "typescript": "^5.7.3"
   }
