--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,19 +1,20 @@
 {
   "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "@solana/web3.js": "^1.95.2",
+    "express": "^4.18.2",
+    "prisma": "^5.10.2",
+    "@prisma/client": "^5.10.2",
+    "zod": "^3.22.4" 
+  },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/node": "^22.13.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "@types/express": "^4.17.21",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
