added backend logic for user creation, tokens, db setup, and profile page

--- a/turbo.json
+++ b/turbo.json
@@ -3,9 +3,9 @@
   "ui": "tui",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "dependsOn": ["^build", "prisma:generate"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*", "prisma/**"],
+      "outputs": ["dist/**"] 
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -16,6 +16,18 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "setup": {
+      "cache": false
+    },
+    "prisma:generate": {
+      "dependsOn": [], 
+      "inputs": ["prisma/schema.prisma", ".env*"], 
+      "outputs": ["node_modules/@prisma/client/**"] 
+    },
+    "prisma:push": {
+      "dependsOn": ["prisma:generate"], 
+      "inputs": ["prisma/schema.prisma", ".env*"] 
     }
   }
 }
