--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,19 +1,30 @@
 {
   "name": "backend",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "setup": "prisma generate && prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.0",
     "@solana/web3.js": "^1.95.2",
+    "@warlok/shared-types": "*",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^5.10.2",
-    "@prisma/client": "^5.10.2",
-    "zod": "^3.22.4" 
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.10.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
