--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "Warlok",
+  "name": "warlok",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "backend:setup": "turbo run setup --filter=backend"
   },
   "devDependencies": {
     "prettier": "^3.5.0",
     "turbo": "^2.4.1",
     "typescript": "5.7.3"
   },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "npm@10.8.2",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+  "packageManager": "npm@10.8.2"
 }
