--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
     "setup": "prisma generate && prisma db push"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
     "@prisma/client": "^5.10.0",
     "@solana/web3.js": "^1.95.2",
     "@warlok/shared-types": "*",
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.10.0",
     "zod": "^3.22.4"
   },
@@ -25,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multer": "^1.4.12",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
