--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,9 +12,11 @@
     "@astrojs/preact": "^4.0.4",
     "@preact/signals": "^2.0.1",
     "@types/gsap": "^1.20.2",
+    "@warlok/shared-types": "*",
     "@webgpu/types": "^0.1.54",
     "astro": "^5.2.5",
     "gsap": "^3.12.7",
+    "html2canvas": "^1.4.1",
     "preact": "^10.25.4",
     "three": "^0.173.0"
   },
