--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,15 +7,16 @@
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
-    "setup": "prisma generate && prisma db push"
+    "setup": "prisma generate && prisma db push",
+    "db:migrate:prod": "prisma migrate deploy"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
     "@prisma/client": "^5.10.0",
     "@solana/web3.js": "^1.95.2",
-    "@warlok/shared-types": "*",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
