--- a/apps/backend/fly.toml
+++ b/apps/backend/fly.toml
@@ -3,21 +3,22 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'warlok-backend'
+app = "warlok-backend"
 primary_region = 'dfw'
 
 [build]
+  dockerfile = "Dockerfile"
 
 [env]
-  PORT = '8080'
+  PORT = "3000"
 
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1
-  processes = ['app']
+  min_machines_running = 0
+  processes = ["app"]
 
 [[services]]
   protocol = 'tcp'
