--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
+    "@azure/storage-blob": "^12.26.0",
     "@prisma/client": "^5.10.0",
     "@solana/web3.js": "^1.95.2",
     "bcrypt": "^5.1.1",
@@ -20,6 +21,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "prisma": "^5.10.0",
     "zod": "^3.22.4"
   },
